# aide

./: meson.build  meson_options.txt
.github/workflows/: linux.yml  macos.yml
